--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "dev:start": "run-p dev:server dev:watch",
     "dev:server": "nodemon ./dist/server/dev-server.js --watch ./dist/server --watch ./dist/client/stats.json",
     "dev:watch": "webpack --watch --mode development",
-    "start": "node ./dist/server/dev-server.js",
-    "build": "webpack"
+    "build": "webpack --mode production",
+    "lint": "prettier --check .",
+    "start": "node ./dist/server/dev-server.js"
   },
   "devDependencies": {
     "@jacob-ebey/astring": "^1.4.4",
@@ -17,12 +18,19 @@
     "@vercel/node": "^1.9.0",
     "acorn": "^8.0.5",
     "acorn-walk": "^8.0.2",
+    "autoprefixer": "^10.2.4",
     "css-loader": "^5.0.2",
+    "cz-conventional-changelog": "^3.3.0",
     "esbuild": "^0.8.46",
     "esbuild-loader": "^2.9.1",
     "mini-css-extract-plugin": "^1.3.7",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.2.6",
+    "postcss-apply": "^0.12.0",
+    "postcss-loader": "^5.0.0",
+    "prettier": "^2.2.1",
+    "tailwindcss": "^2.0.3",
     "ts-loader": "^8.0.17",
     "typescript": "^4.1.5",
     "webpack": "^5.22.0",
@@ -32,5 +40,10 @@
   "dependencies": {
     "forgo": "^0.0.65",
     "linkedom": "0.4.21"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
