--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "run-s build dev:start",
     "dev:start": "run-p dev:server dev:watch",
-    "dev:server": "nodemon ./dist/server/dev-server.js --watch ./dist/server --watch ./dist/client/stats.json",
+    "dev:server": "nodemon ./dist/server/dev-server.js --watch ./dist/server",
     "dev:watch": "webpack --watch --mode development",
     "build": "webpack --mode production",
     "lint": "prettier --check .",
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@jacob-ebey/astring": "^1.4.4",
     "@types/node": "^14.14.28",
+    "@types/webpack-env": "^1.16.0",
     "@vercel/node": "^1.9.0",
     "acorn": "^8.0.5",
     "acorn-walk": "^8.0.2",
