feat: added content feat: updated forgo to support better context gathering feat: refactored head and lazy feat: updated to use postcss-apply for smaller html

--- a/package.json
+++ b/package.json
@@ -3,44 +3,60 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "author": {
+    "email": "jacob.ebey@live.com",
+    "name": "Jacob Ebey",
+    "url": "https://formspree.io/f/mvovnlly"
+  },
   "scripts": {
-    "dev": "run-s build dev:start",
+    "dev": "run-s dev:build dev:start",
+    "dev:build": "cross-env NODE_ENV=development webpack",
     "dev:start": "run-p dev:server dev:watch",
-    "dev:server": "nodemon ./dist/server/dev-server.js --watch ./dist/server",
-    "dev:watch": "webpack --watch --mode development",
-    "build": "webpack --mode production",
+    "dev:server": "cross-env NODE_ENV=development nodemon ./dist/server/dev-server.js --watch ./dist/server",
+    "dev:watch": "cross-env NODE_ENV=development webpack --watch",
+    "build": "cross-env NODE_ENV=production webpack",
     "lint": "prettier --check .",
-    "start": "node ./dist/server/dev-server.js"
+    "start": "cross-env NODE_ENV=production node ./dist/server/dev-server.js"
   },
   "devDependencies": {
-    "@jacob-ebey/astring": "^1.4.4",
-    "@types/node": "^14.14.28",
-    "@types/webpack-env": "^1.16.0",
-    "@vercel/node": "^1.9.0",
-    "acorn": "^8.0.5",
-    "acorn-walk": "^8.0.2",
-    "autoprefixer": "^10.2.4",
-    "css-loader": "^5.0.2",
-    "cz-conventional-changelog": "^3.3.0",
-    "esbuild": "^0.8.46",
-    "esbuild-loader": "^2.9.1",
-    "mini-css-extract-plugin": "^1.3.7",
-    "nodemon": "^2.0.7",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.2.6",
-    "postcss-apply": "^0.12.0",
-    "postcss-loader": "^5.0.0",
-    "prettier": "^2.2.1",
-    "tailwindcss": "^2.0.3",
-    "ts-loader": "^8.0.17",
-    "typescript": "^4.1.5",
-    "webpack": "^5.22.0",
-    "webpack-cli": "^4.5.0",
-    "webpack-stats-plugin": "^1.0.3"
+    "@jacob-ebey/astring": "1.4.4",
+    "@types/node": "14.14.28",
+    "@types/webpack-env": "1.16.0",
+    "@vercel/node": "1.9.0",
+    "acorn": "8.0.5",
+    "acorn-walk": "8.0.2",
+    "autoprefixer": "10.2.4",
+    "copy-webpack-plugin": "7.0.0",
+    "cross-env": "7.0.3",
+    "css-loader": "5.0.2",
+    "cz-conventional-changelog": "3.3.0",
+    "esbuild": "0.8.46",
+    "esbuild-loader": "2.9.1",
+    "file-loader": "6.2.0",
+    "fork-ts-checker-webpack-plugin": "^6.1.0",
+    "mini-css-extract-plugin": "1.3.7",
+    "nodemon": "2.0.7",
+    "npm-run-all": "4.1.5",
+    "postcss": "8.2.6",
+    "postcss-apply": "0.12.0",
+    "postcss-import": "14.0.0",
+    "postcss-loader": "5.0.0",
+    "prettier": "2.2.1",
+    "source-map-support": "0.5.19",
+    "tailwindcss": "2.0.3",
+    "ts-loader": "8.0.17",
+    "typescript": "4.1.5",
+    "webpack": "5.22.0",
+    "webpack-bundle-analyzer": "4.4.0",
+    "webpack-cli": "4.5.0",
+    "webpack-image-resize-loader": "4.0.0",
+    "webpack-stats-plugin": "1.0.3"
   },
   "dependencies": {
-    "forgo": "^0.0.65",
-    "linkedom": "0.4.21"
+    "forgo": "0.0.67",
+    "himalaya": "^1.1.0",
+    "linkedom": "0.4.21",
+    "web-vitals": "1.1.0"
   },
   "config": {
     "commitizen": {
